<resources>
    <string name="placeholder">Lorum ipsum dolor sit amet</string>
    <string name="app_name">Ye Old Barn</string>
    <string name="title_home">Menu</string>
    <string name="title_activity_order">My order</string>
    <string name="title_order">My order</string>
    <string name="title_activity_about">About us</string>
    <string name="title_about">About</string>
    <string name="title_categories">Categories</string>
    <string name="title_dishes">Dishes</string>
    <string name="dish_name">Name of the dish</string>
    <string name="dish_description">A little description of this dish. Mainly telling the ingredients.</string>
    <string name="dish_price">$ 0.00</string>
    <string name="image_dish">Photo of the dish</string>
    <string name="dish_amount">00</string>
    <string name="explanation_about">Ye Old Barn is the oldest bar in Storybrooke. Early in the year 1359 a farmer decided to let some travellers sleep over in his old barn. He served them beer for the evening and bread and cheese for breakfast. Till today this inn is the most popular place to stay for tourists in Storybrooke.</string>
    <string name="total_price">Total price: </string>
    <string name="total_price_value">$ 0.00</string>
    <string name="divider"> > </string>
    <string name="image_barn">Image of the barn</string>
    <string name="error_network">No information found. Make sure your device has a network connection.</string>
    <string name="dish_ordered">The dish is added to your order.</string>
    <string name="dish_removed">The dish is removed from your order.</string>
    <string name="button_clear">CLEAR</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
