<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dish_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/dish_image"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image"
        android:contentDescription="@string/image_dish" />

    <TextView
        android:id="@+id/dish_name"
        android:text="@string/dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:paddingStart="4dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="@dimen/amount_changer_width"
        android:layout_alignTop="@+id/dish_image"
        android:layout_toEndOf="@+id/dish_image" />

    <TextView
        android:id="@+id/dish_price"
        android:text="@string/dish_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:layout_below="@+id/dish_name"
        android:layout_alignStart="@id/dish_name"/>

    <RelativeLayout
        android:layout_width="@dimen/amount_changer_width"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/button_minus"
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:src="@drawable/ic_remove_circle_24dp"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <TextView
            android:id="@+id/dish_amount"
            android:text="@string/dish_amount"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:layout_centerInParent="true" />

        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="@dimen/list_icon_size"
            android:layout_height="@dimen/list_icon_size"
            android:src="@drawable/ic_add_circle_24dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless" />

    </RelativeLayout>

</RelativeLayout>