<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.lennartklein.lennartklein_pset3.DishesActivity">

    <LinearLayout
        android:id="@+id/title_dishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:elevation="@dimen/elevation_low"
        android:clipToPadding="false"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/previous_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_subtitle"
            android:text="@string/title_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/badge_text"
            android:layout_marginStart="@dimen/badge_text"
            android:layout_marginEnd="@dimen/badge_text"
            android:text="@string/divider" />


        <TextView
            android:id="@+id/title_dishes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_subtitle"
            android:textColor="@color/colorBlack"
            android:text="@string/title_dishes" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_dishes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintTop_toBottomOf="@id/title_dishes" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>