<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.lennartklein.lennartklein_pset3.OrderActivity">


    <RelativeLayout
        android:id="@+id/title_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:elevation="@dimen/elevation_low"
        android:clipToPadding="false"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/total_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_subtitle"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/total_price" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_subtitle"
            android:layout_toRightOf="@id/total_price_label"
            android:textColor="@color/colorBlack"
            android:text="@string/total_price_value" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_subtitle"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimary"
            android:minHeight="@dimen/activity_horizontal_margin"
            android:minWidth="@dimen/badge_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/button_clear" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_dishes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintTop_toBottomOf="@id/title_order" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintBottom_toBottomOf="@id/list_dishes"
        app:srcCompat="@drawable/ic_send_white_24dp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>
